# cadquery-png-plugin

./: README.md  pyproject.toml
.github/workflows/: tests.yml
cadquery_png_plugin/: plugin.py
tests/: test_assembly.py
